fix: add module for nuxt

--- a/apps/nuxt-app/package.json
+++ b/apps/nuxt-app/package.json
@@ -16,6 +16,6 @@
     "vue-router": "^4.4.0",
     "@geins/core": "file:../../packages/core",
     "@geins/cms": "file:../../packages/cms",
-    "@geins/nuxt": "file:../../packages/nuxt"
+    "@geins/nuxt": "file:../../modules/nuxt"
   }
 }
