--- a/apps/nuxt-app/package.json
+++ b/apps/nuxt-app/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nuxt-app",
+  "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev -p 3000",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "start": "nuxt start",
@@ -15,7 +15,6 @@
     "vue": "^3.4.31",
     "vue-router": "^4.4.0",
     "@geins/core": "file:../../packages/core",
-    "@geins/cms": "file:../../packages/cms",
-    "@geins/nuxt": "file:../../modules/nuxt"
+    "@geins/cms": "file:../../packages/cms"
   }
 }
