--- a/apps/svelte-app/package.json
+++ b/apps/svelte-app/package.json
@@ -10,18 +10,22 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
+  "dependencies": {
+    "svelte": "^4.2.7",
+    "@geins/cms": "*",
+    "@geins/core": "*"
+  },
   "devDependencies": {
+    "@geins/eslint-config": "*",
+    "@geins/typescript-config": "*",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "svelte": "^4.2.7",
+    "eslint": "^8",
+    "eslint-plugin-svelte": "^2.43.0",
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
+    "typescript": "^5",
     "vite": "^5.0.3"
-  },
-  "dependencies": {
-    "@geins/core": "file:../../packages/core",
-    "@geins/cms": "file:../../packages/cms"
   }
 }
