--- a/package.json
+++ b/package.json
@@ -15,19 +15,17 @@
     "dev:nuxt": "turbo dev --filter=nuxt-app",
     "start:nuxt": "turbo start --filter=nuxt-app",
     "build:nuxt": "turbo build --filter=nuxt-app",
-    "dev:next": "turbo dev --filter=next-app",
-    "dev:svelte": "turbo dev --filter=svelte-app",
+    "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md,vue,js}\""
   },
   "devDependencies": {
     "prettier": "^3.2.5",
     "turbo": "^2.0.7",
     "typescript": "^5.4.5",
-    "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-vue": "^1.1.6"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
-    "node": ">=20"
+    "node": ">=18"
   }
 }
