--- a/packages/config/eslint-config/package.json
+++ b/packages/config/eslint-config/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "files": [
-    "library.js",
-    "next.js",
-    "react-internal.js"
+    "library.js"
   ],
   "devDependencies": {
     "@vercel/style-guide": "^5.2.0",
@@ -14,6 +12,6 @@
     "eslint-plugin-only-warn": "^1.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5"
   }
 }
