--- a/packages/sdk/types/package.json
+++ b/packages/sdk/types/package.json
@@ -14,6 +14,7 @@
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "eslint": "^8"
   }
 }
