--- a/packages/sdk/core/package.json
+++ b/packages/sdk/core/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "rollup -c",
     "prepublishOnly": "npm run build",
-    "lint": "eslint ."
+    "lint": "eslint --fix ."
   },
   "dependencies": {
     "@apollo/client": "^3.11.4",
@@ -26,6 +26,6 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/js-cookie": "^3.0.6",
     "typescript": "^5.4.5",
-    "eslint": "^8"
+    "eslint": "^9"
   }
 }
