--- a/packages/sdk/pim/package.json
+++ b/packages/sdk/pim/package.json
@@ -7,8 +7,7 @@
   "type": "module",
   "scripts": {
     "build": "rollup -c",
-    "prepublishOnly": "npm run build",
-    "lint": "eslint ."
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "@apollo/client": "^3.10.5",
@@ -21,6 +20,6 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "typescript": "^5.4.5",
-    "eslint": "^8"
+    "eslint": "^9"
   }
 }
