--- a/packages/framework/nuxt/package.json
+++ b/packages/framework/nuxt/package.json
@@ -2,6 +2,7 @@
   "name": "@geins/nuxt",
   "version": "1.0.0",
   "license": "MIT",
+  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/types.d.ts",
@@ -21,7 +22,8 @@
     "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "test": "vitest run",
     "test:watch": "vitest watch",
-    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
+    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit",
+    "lint": "eslint --fix ."
   },
   "dependencies": {
     "@nuxt/kit": "^3.12.4",
