--- a/packages/sdk/pim/package.json
+++ b/packages/sdk/pim/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "scripts": {
     "build": "rollup -c",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "yarn build",
+    "lint": "eslint --fix ."
   },
   "dependencies": {
     "@apollo/client": "^3.10.5",
