feat: husky+lint staged

--- a/package.json
+++ b/package.json
@@ -17,13 +17,22 @@
     "start:nuxt": "turbo start --filter=nuxt-app",
     "build:nuxt": "turbo build --filter=nuxt-app",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md,vue,js}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md,vue,js}\"",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,md,vue,js}": [
+      "prettier --write",
+      "eslint --fix ."
+    ]
   },
   "devDependencies": {
     "prettier": "^3.2.5",
     "turbo": "^2.0.7",
     "typescript": "^5.4.5",
-    "prettier-plugin-vue": "^1.1.6"
+    "prettier-plugin-vue": "^1.1.6",
+    "lint-staged": "^15",
+    "husky": "^9"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
