--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
   },
   "devDependencies": {
     "prettier": "^3.2.5",
-    "turbo": "^2.0.7",
-    "typescript": "^5.4.5",
     "prettier-plugin-svelte": "^3.2.6",
-    "prettier-plugin-vue": "^1.1.6"
+    "prettier-plugin-vue": "^1.1.6",
+    "turbo": "^2.0.7",
+    "typescript": "^5.4.5"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
     "node": ">=20"
+  },
+  "dependencies": {
+    "@types/js-cookie": "^3.0.6"
   }
 }
