--- a/packages/framework/nuxt-geins/playground/package.json
+++ b/packages/framework/nuxt-geins/playground/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "my-module-playground",
+  "name": "nuxt-geins-playground",
   "type": "module",
   "scripts": {
     "dev": "nuxi dev",
@@ -8,6 +8,6 @@
     "generate": "nuxi generate"
   },
   "dependencies": {
-    "nuxt": "^3.12.4"
+    "nuxt": "^3.13.0"
   }
 }
