--- a/packages/framework/nuxt-geins/package.json
+++ b/packages/framework/nuxt-geins/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "@geins/nuxt",
+  "name": "nuxt-geins",
   "version": "1.0.0",
+  "description": "Geins module for Nuxt",
+  "repository": "geins-io/nuxt-geins",
   "license": "MIT",
   "type": "module",
   "exports": {
     ".": {
       "types": "./dist/types.d.ts",
-      "import": "./dist/module.mjs"
+      "import": "./dist/module.mjs",
+      "require": "./dist/module.cjs"
     }
   },
   "main": "./dist/module.cjs",
@@ -16,33 +19,31 @@
   ],
   "scripts": {
     "prepack": "nuxt-module-build build",
-    "dev:playground": "nuxi dev playground",
+    "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
     "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "lint": "eslint --fix .",
     "test": "vitest run",
     "test:watch": "vitest watch",
-    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit",
-    "lint": "eslint --fix ."
+    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.12.4",
-    "@geins/core": "*",
-    "broadcast-channel": "^7.0.0",
+    "@nuxt/kit": "^3.13.0",
     "@geins/eslint-config": "*"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.3.9",
-    "@nuxt/eslint-config": "^0.3.13",
-    "@nuxt/module-builder": "^0.8.1",
-    "@nuxt/schema": "^3.12.4",
+    "@nuxt/devtools": "^1.3.14",
+    "@nuxt/eslint-config": "^0.5.2",
+    "@nuxt/module-builder": "^0.8.3",
+    "@nuxt/schema": "^3.13.0",
     "@nuxt/test-utils": "^3.14.1",
-    "@types/node": "^20.14.11",
+    "@types/node": "^22.5.0",
     "changelogen": "^0.5.5",
-    "eslint": "^9",
-    "nuxt": "^3.12.4",
-    "typescript": "^5.4.5",
-    "vitest": "^2.0.3",
-    "vue-tsc": "^2.0.26"
+    "eslint": "^9.9.1",
+    "nuxt": "^3.13.0",
+    "typescript": "latest",
+    "vitest": "^2.0.5",
+    "vue-tsc": "^2.0.29"
   }
 }
