--- a/packages/framework/nuxt-geins/package.json
+++ b/packages/framework/nuxt-geins/package.json
@@ -30,7 +30,10 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.13.0",
-    "@geins/eslint-config": "*"
+    "@geins/eslint-config": "*",
+    "@geins/core": "*",
+    "@geins/cms": "*",
+    "@geins/types": "*"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.3.14",
