--- a/packages/sdk/crm/package.json
+++ b/packages/sdk/crm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@geins/auth",
+  "name": "@geins/crm",
   "version": "0.0.1",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
