--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build:nuxt": "turbo build --filter=nuxt-app",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md,vue,js}\"",
-    "prepare": "husky"
+    "prepare": "husky",
+    "clean": "node scripts/clean.js"
   },
   "lint-staged": {
     "*.{ts,tsx,md,vue,js}": [
