--- a/packages/framework/nuxt-geins/package.json
+++ b/packages/framework/nuxt-geins/package.json
@@ -29,11 +29,12 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.13.0",
-    "@geins/eslint-config": "*",
-    "@geins/core": "*",
     "@geins/cms": "*",
-    "@geins/types": "*"
+    "@geins/core": "*",
+    "@geins/eslint-config": "*",
+    "@geins/types": "*",
+    "@nuxt/kit": "^3.13.0",
+    "defu": "^6.1.4"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.3.14",
