--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^3.2.5",
-    "turbo": "^2.0.7",
-    "typescript": "^5.4.5",
-    "prettier-plugin-vue": "^1.1.6",
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
+    "@commitlint/travis-cli": "^19.4.1",
+    "husky": "^9",
     "lint-staged": "^15",
-    "husky": "^9"
+    "prettier": "^3.2.5",
+    "prettier-plugin-vue": "^1.1.6",
+    "turbo": "^2.0.7",
+    "typescript": "^5.4.5"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
