fix: re-activate module

--- a/apps/nuxt-app/package.json
+++ b/apps/nuxt-app/package.json
@@ -16,6 +16,7 @@
     "@geins/cms": "*",
     "@geins/core": "*",
     "@geins/crm": "*",
+    "nuxt-geins": "*",
     "cookie-universal": "^2.2.2",
     "nuxt": "^3.12.4",
     "vue": "^3.4.31",
