--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "workspaces": [
     "apps/*",
     "packages/config/*",
-    "packages/sdk/*",
-    "packages/framework/*"
+    "packages/sdk/*"
   ],
   "scripts": {
     "build": "turbo build",
