--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start:nuxt": "turbo start --filter=nuxt-app",
     "build:nuxt": "turbo build --filter=nuxt-app",
     "lint": "turbo lint",
+    "link": "turbo run link",
     "format": "prettier --write \"**/*.{ts,md,vue,js}\"",
     "prepare": "husky",
     "clean": "node scripts/clean.js"
