--- a/packages/config/eslint-config/package.json
+++ b/packages/config/eslint-config/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "type": "module",
   "module": "./eslint-config.js",
+  "scripts": {
+    "link": "yarn link"
+  },
   "devDependencies": {
     "@eslint/js": "9.9.1",
     "eslint-plugin-turbo": "^2.1.0",
