--- a/packages/sdk/core/package.json
+++ b/packages/sdk/core/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "rollup -c",
     "prepublishOnly": "yarn build",
-    "lint": "eslint --fix ."
+    "lint": "eslint --fix .",
+    "link": "yarn link"
   },
   "dependencies": {
     "@apollo/client": "^3.11.4",
