--- a/packages/sdk/types/package.json
+++ b/packages/sdk/types/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "scripts": {
     "build": "rollup -c",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "link": "yarn link"
   },
   "dependencies": {},
   "devDependencies": {
