--- a/turbo.json
+++ b/turbo.json
@@ -1,15 +1,18 @@
 {
-    "$schema": "https://turbo.build/schema.json",
-    "tasks": {
-        "build": {
-            "dependsOn": ["^build"],
-            "outputs": ["dist/**"]
-        },
-        "lint": {
-            "dependsOn": ["^lint"]
-        },
-        "dev": {
-            "cache": false
-        }
+  "$schema": "https://turbo.build/schema.json",
+  "tasks": {
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**"]
+    },
+    "lint": {
+      "dependsOn": ["^lint"]
+    },
+    "link": {
+      "dependsOn": []
+    },
+    "dev": {
+      "cache": false
     }
+  }
 }
