--- a/packages/sdk/pim/package.json
+++ b/packages/sdk/pim/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@geins/search",
+  "name": "@geins/pim",
   "version": "0.1.0",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
@@ -14,9 +14,8 @@
   },
   "dependencies": {
     "@geins/core": "*",
-    "@geins/pim": "*",
-    "@apollo/client": "^3.11.8",
-    "graphql": "^16.9.0"
+    "@apollo/client": "^3.10.5",
+    "graphql": "^16.8.2"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
@@ -24,7 +23,7 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@geins/eslint-config": "*",
     "@geins/types": "*",
-    "typescript": "^5.6.2",
+    "typescript": "^5.4.5",
     "eslint": "^9"
   }
 }
