--- a/apps/nuxt-app/package.json
+++ b/apps/nuxt-app/package.json
@@ -14,6 +14,7 @@
     "link-module": "yarn link nuxt-geins"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.0.1",
     "@geins/cms": "*",
     "@geins/core": "*",
     "@geins/crm": "*",
