--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "packages/sdk/*"
   ],
   "scripts": {
-    "build": "turbo build",
+    "build": "yarn codegen &&  turbo build",
     "dev": "turbo dev",
     "dev:nuxt": "turbo dev --filter=nuxt-app",
     "start:nuxt": "turbo start --filter=nuxt-app",
@@ -19,7 +19,8 @@
     "link": "turbo run link",
     "format": "prettier --write \"**/*.{ts,md,vue,js}\"",
     "prepare": "husky",
-    "clean": "node scripts/clean.js"
+    "clean": "node scripts/clean.js",
+    "codegen": "yarn workspace @geins/types codegen"
   },
   "lint-staged": {
     "*.{ts,md,vue,js}": [
