--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev:nuxt": "turbo dev --filter=nuxt-app",
     "start:nuxt": "turbo start --filter=nuxt-app",
     "build:nuxt": "turbo build --filter=nuxt-app",
+    "build:sdk": "turbo build --filter=./packages/sdk/*",
     "lint": "turbo lint",
     "link": "turbo run link",
     "format": "prettier --write \"**/*.{ts,md,vue,js}\"",
