--- a/packages/sdk/types/package.json
+++ b/packages/sdk/types/package.json
@@ -14,6 +14,9 @@
   "dependencies": {},
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/client-preset": "^4.3.3",
+    "@graphql-codegen/jsdoc": "^3.0.0",
+    "@graphql-codegen/schema-ast": "^4.1.0",
     "@graphql-codegen/typescript": "^4.0.9",
     "@graphql-codegen/typescript-operations": "^4.2.3",
     "@rollup/plugin-commonjs": "^26.0.1",
