--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "prepare": "husky",
     "clean": "node scripts/clean.js",
     "codegen": "yarn workspace @geins/types codegen",
-    "prepare-schema": "node scripts/prepare-schema.js"
+    "prepare-schema": "node scripts/prepare-schema.js",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "lint-staged": {
     "*.{ts,md,vue,js}": [
@@ -34,12 +37,16 @@
     "@commitlint/cli": "^19.4.1",
     "@commitlint/config-conventional": "^19.4.1",
     "@commitlint/travis-cli": "^19.4.1",
+    "@mermaid-js/mermaid-mindmap": "^9.3.0",
     "husky": "^9",
     "lint-staged": "^15",
+    "mermaid": "^11.2.1",
     "prettier": "^3.2.5",
     "prettier-plugin-vue": "^1.1.6",
     "turbo": "^2.0.7",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitepress": "^1.3.4",
+    "vitepress-plugin-mermaid": "^2.0.17"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
