--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Geins",
   "private": true,
   "license": "MIT",
+  "type": "module",
   "workspaces": [
     "apps/*",
     "packages/config/*",
@@ -25,7 +26,10 @@
     "prepare-schema": "node scripts/prepare-schema.js",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "lint-staged": {
     "*.{ts,md,vue,js}": [
@@ -38,13 +42,21 @@
     "@commitlint/config-conventional": "^19.4.1",
     "@commitlint/travis-cli": "^19.4.1",
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
+    "@types/jest": "^29.5.13",
+    "babel-jest": "^29.7.0",
+    "graphql-tag": "^2.12.6",
     "husky": "^9",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-graphql": "^2.1.0",
+    "jest-transform-stub": "^2.0.0",
     "lint-staged": "^15",
     "mermaid": "^11.2.1",
     "prettier": "^3.2.5",
     "prettier-plugin-vue": "^1.1.6",
+    "ts-jest": "^29.2.5",
     "turbo": "^2.0.7",
-    "typescript": "^5.4.5",
+    "typescript": "^5.6.2",
     "vitepress": "^1.3.4",
     "vitepress-plugin-mermaid": "^2.0.17"
   },
