--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@commitlint/cli": "^19.4.1",
     "@commitlint/config-conventional": "^19.4.1",
     "@commitlint/travis-cli": "^19.4.1",
+    "@graphql-tools/jest-transform": "^2.0.0",
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
     "@types/jest": "^29.5.13",
     "babel-jest": "^29.7.0",
