--- a/.github/workflows/deploy-documenation.yml
+++ b/.github/workflows/deploy-documenation.yml
@@ -31,6 +31,6 @@ jobs:
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
           app_location: '/' # App source code path
           app_build_command: 'npm run docs:build'
-          api_location: '' # Api source code path - optional
+          # api_location: '' # Api source code path - optional
           output_location: 'docs/.vitepress/dist' # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
