--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
-// Root-level tsconfig.json
+// global typscript config for the monorepo
 {
   "compilerOptions": {
     "target": "ESNext",
@@ -10,16 +10,16 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "baseUrl": "./", // Base URL for module resolution
+    "baseUrl": "./",
     "paths": {
       "@geins/*": [
         "packages/*/src"
-      ] // Path alias for packages (adjust as needed)
+      ]
     }
   },
   "include": [
     "packages/**/*"
-  ], // Include all packages in the monorepo
+  ],
   "exclude": [
     "node_modules",
     "dist"
