--- a/package.json
+++ b/package.json
@@ -48,11 +48,10 @@
     "graphql-tag": "^2.12.6",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "jest-transform-graphql": "^2.1.0",
     "jest-transform-stub": "^2.0.0",
     "lint-staged": "^15.2.10",
-    "mermaid": "^11.2.1",
+    "mermaid": "^11.3.0",
     "prettier": "^3.3.3",
     "prettier-plugin-vue": "^1.1.6",
     "ts-jest": "^29.2.5",
@@ -64,5 +63,9 @@
   "packageManager": "yarn@1.22.22",
   "engines": {
     "node": ">=20"
+  },
+  "dependencies": {
+    "cross-fetch": "^4.0.0",
+    "jest-environment-jsdom-fourteen": "^1.0.1"
   }
 }
