--- a/packages/sdk/crm/package.json
+++ b/packages/sdk/crm/package.json
@@ -14,16 +14,17 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
-    "graphql": "^16.9.0",
-    "@geins/core": "*"
+    "@geins/core": "*",
+    "crypto-js": "^4.2.0",
+    "graphql": "^16.9.0"
   },
   "devDependencies": {
+    "@geins/eslint-config": "*",
+    "@geins/types": "*",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.0",
-    "@geins/eslint-config": "*",
-    "@geins/types": "*",
-    "typescript": "^5.6.2",
-    "eslint": "^9.11.1"
+    "eslint": "^9.11.1",
+    "typescript": "^5.6.2"
   }
 }
