--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geins-sdk",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Geins",
   "private": true,
   "license": "MIT",
@@ -29,7 +29,8 @@
     "docs:preview": "vitepress preview docs",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "release": "changelogen --release"
   },
   "lint-staged": {
     "*.{ts,md,vue,js}": [
@@ -58,13 +59,15 @@
     "turbo": "^2.1.3",
     "typescript": "^5.6.2",
     "vitepress": "^1.3.4",
-    "vitepress-plugin-mermaid": "^2.0.17"
+    "vitepress-plugin-mermaid": "^2.0.17",
+    "changelogen": "^0.5.5"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
     "node": ">=20"
   },
   "dependencies": {
+    "@changesets/cli": "^2.27.9",
     "cross-fetch": "^4.0.0",
     "jest-environment-jsdom-fourteen": "^1.0.1"
   }
