--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geins-sdk",
-  "version": "0.1.2",
+  "version": "0.0.1",
   "author": "Geins",
   "private": true,
   "license": "MIT",
@@ -30,7 +30,10 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "release": "changelogen --release"
+    "version": "changeset version --snapshot dev",
+    "release": "changeset publish --tag dev",
+    "version:dev": "changeset version --snapshot dev",
+    "release:dev": "changeset publish --tag dev"
   },
   "lint-staged": {
     "*.{ts,md,vue,js}": [
@@ -46,6 +49,7 @@
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
     "@types/jest": "^29.5.13",
     "babel-jest": "^29.7.0",
+    "changelogen": "^0.5.5",
     "graphql-tag": "^2.12.6",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
@@ -59,8 +63,7 @@
     "turbo": "^2.1.3",
     "typescript": "^5.6.2",
     "vitepress": "^1.3.4",
-    "vitepress-plugin-mermaid": "^2.0.17",
-    "changelogen": "^0.5.5"
+    "vitepress-plugin-mermaid": "^2.0.17"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
