--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "link": "turbo run link",
     "format": "prettier --write \"**/*.{ts,md,vue,js}\"",
     "prepare": "husky",
-    "clean": "node scripts/clean.js",
+    "clean": "node scripts/clean.cjs",
     "codegen": "yarn workspace @geins/types codegen",
     "prepare-schema": "node scripts/prepare-schema.js",
     "docs:dev": "vitepress dev docs",
@@ -49,7 +49,6 @@
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
     "@types/jest": "^29.5.13",
     "babel-jest": "^29.7.0",
-    "changelogen": "^0.5.5",
     "graphql-tag": "^2.12.6",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
@@ -70,7 +69,6 @@
     "node": ">=20"
   },
   "dependencies": {
-    "@changesets/cli": "^2.27.9",
     "cross-fetch": "^4.0.0",
     "jest-environment-jsdom-fourteen": "^1.0.1"
   }
