--- a/package.json
+++ b/package.json
@@ -38,13 +38,19 @@
     ]
   },
   "devDependencies": {
+    "@algolia/client-search": "^5.13.0",
+    "@babel/core": "^7.26.0",
+    "@changesets/cli": "^2.27.9",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@commitlint/travis-cli": "^19.5.0",
     "@graphql-tools/jest-transform": "^2.0.0",
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
     "@types/jest": "^29.5.13",
+    "@types/node": "^22.9.0",
     "babel-jest": "^29.7.0",
+    "eslint": "^9.14.0",
+    "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
@@ -54,9 +60,11 @@
     "mermaid": "^11.3.0",
     "prettier": "^3.3.3",
     "prettier-plugin-vue": "^1.1.6",
+    "search-insights": "^2.17.2",
     "ts-jest": "^29.2.5",
     "turbo": "^2.1.3",
     "typescript": "^5.6.2",
+    "vite": "^5.4.11",
     "vitepress": "^1.3.4",
     "vitepress-plugin-mermaid": "^2.0.17"
   },
