--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "docs:preview": "vitepress preview docs",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "changeset-add": "changeset add",
+    "version:next": "changeset version --no-git-tag --snapshot canary",
+    "release:next": "changeset version --no-git-tag --snapshot canary && changeset publish --no-git-tag --tag canary",
+    "version": "changeset version",
+    "release": "changeset version && changeset publish"
   },
   "lint-staged": {
     "*.{ts,md,vue,js}": [
