--- a/packages/sdk/cms/package.json
+++ b/packages/sdk/cms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/cms",
-  "version": "0.1.0",
+  "version": "0.3.0-canary",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -15,7 +15,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "graphql": "^16.9.0",
-    "@geins/core": "*"
+    "@geins/core": "0.3.0-canary"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.0",
