--- a/packages/sdk/types/package.json
+++ b/packages/sdk/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/types",
-  "version": "0.1.0",
+  "version": "0.3.0-canary",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
