--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "geins-sdk",
-  "version": "0.0.5",
+  "name": "geins-typescript-sdk",
+  "version": "0.4.0",
   "author": "Geins",
   "private": true,
   "license": "MIT",
   "type": "module",
   "workspaces": [
-    "apps/*",
     "packages/config/*",
     "packages/sdk/*"
   ],
@@ -29,7 +28,12 @@
     "docs:preview": "vitepress preview docs",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "changeset-add": "changeset add",
+    "version:next": "changeset version --no-git-tag --snapshot canary",
+    "release:next": "yarn test && yarn build:sdk && changeset version --no-git-tag --snapshot canary && changeset publish --no-git-tag --tag canary",
+    "version": "changeset version",
+    "release": "build:sdk && changeset version && changeset publish"
   },
   "lint-staged": {
     "*.{ts,md,vue,js}": [
@@ -38,13 +42,19 @@
     ]
   },
   "devDependencies": {
+    "@algolia/client-search": "^5.13.0",
+    "@babel/core": "^7.26.0",
+    "@changesets/cli": "^2.27.9",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@commitlint/travis-cli": "^19.5.0",
     "@graphql-tools/jest-transform": "^2.0.0",
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
     "@types/jest": "^29.5.13",
+    "@types/node": "^22.9.0",
     "babel-jest": "^29.7.0",
+    "eslint": "^9.14.0",
+    "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
@@ -54,9 +64,11 @@
     "mermaid": "^11.3.0",
     "prettier": "^3.3.3",
     "prettier-plugin-vue": "^1.1.6",
+    "search-insights": "^2.17.2",
     "ts-jest": "^29.2.5",
     "turbo": "^2.1.3",
     "typescript": "^5.6.2",
+    "vite": "^5.4.11",
     "vitepress": "^1.3.4",
     "vitepress-plugin-mermaid": "^2.0.17"
   },
