--- a/packages/sdk/types/package.json
+++ b/packages/sdk/types/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@geins/types",
-  "version": "0.3.0-canary",
+  "version": "0.3.1",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "build": "rollup -c",
     "prepublishOnly": "npm run build",
