--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geins-typescript-sdk",
-  "version": "0.4.1",
+  "version": "0.3.1",
   "author": "Geins",
   "private": true,
   "license": "MIT",
@@ -33,7 +33,7 @@
     "version:next": "changeset version --no-git-tag --snapshot canary",
     "release:next": "yarn test && yarn build:sdk && changeset version --no-git-tag --snapshot canary && changeset publish --no-git-tag --tag canary",
     "version": "changeset version",
-    "release": "build:sdk && changeset version && changeset publish"
+    "release": "yarn test && yarn build:sdk && changeset version && changeset publish"
   },
   "lint-staged": {
     "*.{ts,md,vue,js}": [
