fix: added secrets to wf for test

--- a/.github/workflows/release-packages.yml
+++ b/.github/workflows/release-packages.yml
@@ -13,6 +13,18 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    env:
+      GEINS_API_KEY: ${{ secrets.GEINS_API_KEY }}
+      GEINS_ACCOUNT_NAME: ${{ secrets.GEINS_ACCOUNT_NAME }}
+      GEINS_CHANNEL: ${{ secrets.GEINS_CHANNEL }}
+      GEINS_TLD: ${{ secrets.GEINS_TLD }}
+      GEINS_LOCALE: ${{ secrets.GEINS_LOCALE }}
+      GEINS_MARKET: ${{ secrets.GEINS_MARKET }}
+      GEINS_ENVIRONMENT: ${{ secrets.GEINS_ENVIRONMENT }}
+      GEINS_USERNAME: ${{ secrets.GEINS_USERNAME }}
+      GEINS_PASSWORD: ${{ secrets.GEINS_PASSWORD }}
+      GEINS_CMS_FAMILY: ${{ secrets.GEINS_CMS_FAMILY }}
+      GEINS_CMS_AREA: ${{ secrets.GEINS_CMS_AREA }}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -32,6 +44,12 @@ jobs:
 
       - name: Install Dependencies
         run: yarn install --frozen-lockfile --immutable
+
+      - name: Build Packages
+        run: yarn build:sdk
+
+      - name: Run Tests
+        run: yarn test
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
