chore: added readme files to packages

--- a/packages/config/eslint-config/package.json
+++ b/packages/config/eslint-config/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "module": "./eslint-config.js",
+  "license": "MIT",
   "scripts": {
     "link": "yarn link"
   },
