--- a/packages/sdk/cms/package.json
+++ b/packages/sdk/cms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/cms",
-  "version": "0.3.4",
+  "version": "0.3.5-canary",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -15,13 +15,13 @@
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "graphql": "^16.9.0",
-    "@geins/core": "0.3.4"
+    "@geins/core": "0.3.5-canary"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.0",
-    "@geins/eslint-config": "*",
+    "@geins/eslint-config": "0.1.6-canary",
     "typescript": "^5.6.2",
     "eslint": "^9.11.1"
   }
