feat: add logging

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -17,7 +17,7 @@
   "ignore": [],
   "snapshot": {
     "useCalculatedVersion": true,
-    "prereleaseTemplate": "{tag}"
+    "prereleaseTemplate": "{tag}-{commit}"
   },
   "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
     "onlyUpdatePeerDependentsWhenOutOfRange": true
