--- a/packages/sdk/cms/package.json
+++ b/packages/sdk/cms/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "graphql": "^16.9.0",
-    "@geins/core": "0.3.5-canary-848c93a8f7473b2be21671e5c82eb3dca0788613"
+    "@geins/core": "*"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.0",
