--- a/packages/sdk/core/package.json
+++ b/packages/sdk/core/package.json
@@ -20,7 +20,7 @@
     "broadcast-channel": "^7.0.0"
   },
   "devDependencies": {
-    "@geins/types": "0.3.5-canary-848c93a8f7473b2be21671e5c82eb3dca0788613",
+    "@geins/types": "*",
     "@geins/eslint-config": "0.1.6-canary-848c93a8f7473b2be21671e5c82eb3dca0788613",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-graphql": "^2.0.5",
