--- a/packages/sdk/crm/package.json
+++ b/packages/sdk/crm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/crm",
-  "version": "0.3.4",
+  "version": "0.3.5-canary-848c93a8f7473b2be21671e5c82eb3dca0788613",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -14,13 +14,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
-    "@geins/core": "0.3.4",
+    "@geins/core": "0.3.5-canary-848c93a8f7473b2be21671e5c82eb3dca0788613",
     "crypto-js": "^4.2.0",
     "graphql": "^16.9.0"
   },
   "devDependencies": {
-    "@geins/eslint-config": "*",
-    "@geins/types": "0.3.4",
+    "@geins/eslint-config": "0.1.6-canary-848c93a8f7473b2be21671e5c82eb3dca0788613",
+    "@geins/types": "0.3.5-canary-848c93a8f7473b2be21671e5c82eb3dca0788613",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.0",
