chore: adding script to update docs badges

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
+    "docs:update": "node scripts/updateDocs.cjs",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
