--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "typescript": "^5.6.2",
     "vite": "^5.4.11",
     "vitepress": "^1.3.4",
-    "vitepress-plugin-mermaid": "^2.0.17"
+    "vitepress-plugin-mermaid": "^2.0.17",
+    "canvas-confetti": "^1.9.3"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
