--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "@commitlint/travis-cli": "^19.5.0",
     "@graphql-tools/jest-transform": "^2.0.0",
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.9.0",
     "babel-jest": "^29.7.0",
+    "canvas-confetti": "^1.9.3",
     "eslint": "^9.14.0",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
@@ -71,8 +73,7 @@
     "typescript": "^5.6.2",
     "vite": "^5.4.11",
     "vitepress": "^1.3.4",
-    "vitepress-plugin-mermaid": "^2.0.17",
-    "canvas-confetti": "^1.9.3"
+    "vitepress-plugin-mermaid": "^2.0.17"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
