--- a/packages/sdk/crm/package.json
+++ b/packages/sdk/crm/package.json
@@ -16,10 +16,7 @@
     "link": "yarn link"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.8",
-    "@geins/core": "0.3.7",
-    "crypto-js": "^4.2.0",
-    "graphql": "^16.9.0"
+    "@geins/core": "0.3.7"
   },
   "devDependencies": {
     "@geins/eslint-config": "0.1.7",
@@ -27,6 +24,7 @@
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "eslint": "^9.11.1",
     "typescript": "^5.6.2"
   }
