feat: create, add, update

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,8 @@
 {
-  "plugins": [
-    "prettier-plugin-vue"
-  ],
   "printWidth": 110,
   "tabWidth": 2,
   "useTabs": false,
   "endOfLine": "auto",
-  "arrowParens": "avoid",
-  "singleQuote": true
+  "arrowParens": "always",
+  "singleQuote": true,
 }
