--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "license": "MIT",
   "type": "module",
   "workspaces": [
+    "apps/nuxt-app",
     "packages/config/*",
     "packages/sdk/*"
   ],
   "scripts": {
     "build": "yarn codegen &&  turbo build",
     "dev": "turbo dev",
+    "dev:test": "turbo dev --filter=test-app",
     "dev:nuxt": "turbo dev --filter=nuxt-app",
     "start:nuxt": "turbo start --filter=nuxt-app",
     "build:nuxt": "turbo build --filter=nuxt-app",
