--- a/packages/sdk/cms/package.json
+++ b/packages/sdk/cms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/cms",
-  "version": "0.3.8",
+  "version": "0.3.9-canary-dfd2af2585c08c969e5961c149739a9b0213095f",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -16,7 +16,7 @@
     "link": "yarn link"
   },
   "dependencies": {
-    "@geins/core": "*"
+    "@geins/core": "0.3.9-canary-dfd2af2585c08c969e5961c149739a9b0213095f"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.0",
