--- a/packages/sdk/core/package.json
+++ b/packages/sdk/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/core",
-  "version": "0.3.8",
+  "version": "0.3.9-canary-dfd2af2585c08c969e5961c149739a9b0213095f",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -22,7 +22,7 @@
     "broadcast-channel": "^7.0.0"
   },
   "devDependencies": {
-    "@geins/types": "*",
+    "@geins/types": "0.3.9-canary-dfd2af2585c08c969e5961c149739a9b0213095f",
     "@geins/eslint-config": "0.1.7",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-graphql": "^2.0.5",
