--- a/packages/sdk/crm/package.json
+++ b/packages/sdk/crm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/crm",
-  "version": "0.3.8",
+  "version": "0.3.9-canary-dfd2af2585c08c969e5961c149739a9b0213095f",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -16,11 +16,11 @@
     "link": "yarn link"
   },
   "dependencies": {
-    "@geins/core": "0.3.8"
+    "@geins/core": "0.3.9-canary-dfd2af2585c08c969e5961c149739a9b0213095f"
   },
   "devDependencies": {
     "@geins/eslint-config": "0.1.7",
-    "@geins/types": "0.3.8",
+    "@geins/types": "0.3.9-canary-dfd2af2585c08c969e5961c149739a9b0213095f",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.0",
