--- a/packages/sdk/types/package.json
+++ b/packages/sdk/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/types",
-  "version": "0.3.8",
+  "version": "0.3.9-canary-dfd2af2585c08c969e5961c149739a9b0213095f",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
